# argparse.cpp

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: argparse.h  argparse.hpp  type_info.hpp
src/: argparse.cpp  argparse_test.cpp  bindable_type_info_test.cpp  example.cpp  optbase_set_default_test.cpp
tests/: argparse_test.cpp  awk_test.cpp  bzip2_test.cpp  cat_test.cpp  chmod_test.cpp  chown_test.cpp  crontab_test.cpp  curl_test.cpp  cut_test.cpp  date_test.cpp  df_test.cpp  diff_test.cpp  dig_test.cpp  du_test.cpp  echo_test.cpp  finger_test.cpp  free_test.cpp  ftp_test.cpp  getopt_test.cpp  gnu_coreutils_cat_test.cpp  gnu_coreutils_tac_test.cpp  goupadd_test.cpp  grep_test.cpp  groupdel_test.cpp  groupmode_test.cpp  gunzip_test.cpp  gzip_test.cpp  head_test.cpp  history_test.cpp  hostname_test.cpp  hwinfo_test.cpp  id_test.cpp  ifconfig_test.cpp  iostat_test.cpp  iptables_test.cpp  kill_test.cpp  last_test.cpp  less_test.cpp  ln_test.cpp  ls_test.cpp  (+48 more)
